# rangeplotter

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  rangeplotter.spec
.github/: FUNDING.yml
.github/prompts/: plan-implementMetadataInOutputKmls.prompt.md  plan-smartResumeAndSessionManagement.prompt.md
.github/workflows/: build.yml
config/: config.yaml
docs/: RELEASE_PROCESS.md  ROADMAP.md  SMART_RESUME.md  TODO.md  plan-metadata-v2.md  viewshed_caching.md
docs/guide/: best_practices.md  commands.md  configuration.md  features.md  getting_started.md  index.md  pip_install.md
examples/: README.md  radars.csv  radars.kml  radars_test_union.kml  test_config.yaml
input/: radars_sample.kml
scripts/: install.sh  install_or_upgrade.sh
src/rangeplotter/: __init__.py  __main__.py  (+1 more)
src/rangeplotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  london_sites.kml  test_auth.py  test_auth_extra.py  test_cli.py  test_cli_auth_failure.py  test_cli_detection_summary.py  test_cli_extra.py  test_cli_fallback.py  test_cli_interactive.py  test_config.py  test_dem.py  test_dem_extra.py  test_dem_query.py  test_detection_ref.py  test_detection_verbose.py  test_earth.py  test_export.py  test_kml.py  test_kml_escaping.py  test_kml_extra.py  test_logging.py  test_models.py  test_offline_mode.py  test_optional_union.py  test_processing.py  test_rings.py  test_sensor_override.py  test_sequential_filenames.py  test_smart_resume.py  test_viewshed_cache.py  test_viewshed_integration.py
(+64 files in other folders)
